// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders the UI snapshot correctly 1`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="standard-link"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 2`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="forwards-link"
  rel={null}
  target={null}
>
  Forwards
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="forwards-link-direction-icon"
    role="img"
    title="arrow icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
</a>
`;

exports[`Link renders the UI snapshot correctly 3`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="backwards-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="backwards-link-direction-icon"
    role="img"
    title="arrow icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  Backwards
</a>
`;

exports[`Link renders the UI snapshot correctly 4`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="external-link"
  rel="nofollow noopener noreferrer"
  target="_blank"
>
  External
  <span
    className="css-0"
  >
    This link opens in a new window
  </span>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="external-link-external-icon"
    role="img"
    title="External link"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
</a>
`;

exports[`Link renders the UI snapshot correctly 5`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="standalone-link"
  rel={null}
  target={null}
>
  Standalone
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="standalone-link-standalone-icon"
    role="img"
    title="Navigation arrow"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
</a>
`;

exports[`Link renders the UI snapshot correctly 6`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Primary
</a>
`;

exports[`Link renders the UI snapshot correctly 7`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Secondary
</a>
`;

exports[`Link renders the UI snapshot correctly 8`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Pill
</a>
`;

exports[`Link renders the UI snapshot correctly 9`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Callout
</a>
`;

exports[`Link renders the UI snapshot correctly 10`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button No Brand
</a>
`;

exports[`Link renders the UI snapshot correctly 11`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Disabled
</a>
`;

exports[`Link renders the UI snapshot correctly 12`] = `
<a
  className="chakra-link css-1xdhyk6"
  href="#passed-in-link"
  id="icon-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="link-icon"
    role="img"
    title="download icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  Download
</a>
`;

exports[`Link renders the UI snapshot correctly 13`] = `
<a
  className="chakra-link css-1xdhyk6"
  id="anchor-link"
  rel={null}
  target={null}
>
  <a
    href="#existing-anchor-tag"
  >
    check link
  </a>
</a>
`;

exports[`Link renders the UI snapshot correctly 14`] = `
<a
  className="chakra-link css-1xdhyk6"
  id="anchor-icon-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1grhd2q"
    focusable={false}
    id="link-icon"
    role="img"
    title="check icon"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        strokeLinecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        strokeLinecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        strokeMiterlimit="10"
      />
    </g>
  </svg>
  <a
    href="#existing-anchor-tag"
  >
    check link
  </a>
</a>
`;

exports[`Link renders the UI snapshot correctly 15`] = `
<a
  className="chakra-link css-16h1ce8"
  href="#passed-in-link"
  id="chakra"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 16`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="props"
  href="#passed-in-link"
  id="props"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 17`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="props"
  id="props"
  rel={null}
  target={null}
>
  <a
    href="#passed-in-link"
  >
    Standard
  </a>
</a>
`;
